2003-09-19  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b80

	* Language updates: German (de_DE), Dutch (nl_NL)

2003-09-19  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b79

	* New language: Hungarian (hu_HU)

	* Language updates: German (de_DE)

	* Modified add_photo.php. 
	  Now progressbar only appear when a filename was given and this file exist.
	  If a filename was given, but the file does not exist an error message appears.

	* Synced .po files against change.

	* Added missing flag for Korean (ko_KR)

2003-09-18  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b78

	* Language updates: German (de_DE), Spanish (es_ES), Turkish (tr_TR)

2003-09-17  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b77

	* Language updates: German (de_DE), Polish (pl_PL), Finnish (fi_FI)
			    Brazilian Portuguese (pt_BR)

	* Fixed bug in Report.

2003-09-16  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b76

	* Language updates: Hebrew (he_IL), Polish (pl_PL), 
			    Traditional Chinese (zh_TW & zh_TW.utf8),
			    German (de_DE)

	* Tweaked check page. checks for PHP4 and PHP4.1 are no in one box.

2003-09-12  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b75

	* New Languages: Bulgarian (bg_BG) ; Brazilian Portuguese (pt_BR)
	 		 Added flags also.

	* Language updates: Polish (pl_PL), Icelandish (is_IS); Finnish (fi_FI)
			    German (de_DE).
	
	* removed broken lines in .po files.
	  - thanks to donwillingham for help and script !
	  - Script added.
	
	* Added Copyright to po files.

	* Updated .mo files.

	* Synced languages against latest changes/additions.

	* Flags are showed in 2 rows when more then 20.

	* Added locale fix for Linux Systems.

	* Tweaked _() emulation, now fuzzy line are ignored like gettext does


2003-09-11  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b74

	* Made it an option to print date of last comment instead
	  of "*".

	* Albums as well as images can be flagged if they have
	  comments available.

	* Hopefully then end of the voting stuff.   Move photo now