@@ -1,3 +1,13 @@
+2003-09-20  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b81
+
+	* Fixed a typo in the hungarian aliases in nls.php.  Added more aliases
+	  for FreeBSD.
+
+	* Fix a bug in the config wizard where it will complain about missing
+	  locale aliases in the final step if you have an alias that is set to
+	  the empty string (which can happen if we can't detect any aliases for
+	  a given locale).
+
 2003-09-19  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b80
 
 	* Language updates: German (de_DE), Dutch (nl_NL)
